# maldi_PIKE

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: Example_peaks.txt
ismb2020_maldi/: __init__.py  analyse_split.py  baseline.py  baseline_clustering.py  baseline_gp_rbf.py  baseline_maldiquant.py  baseline_maldiquant_confidence.py  calibrate.py  calibrate_histograms.py  collect_results.py  demo_kernel.py  demo_kernel_confidence.py  diffusion_kernel.py  diffusion_kernel_clustering.py  diffusion_kernel_confidence.py  example_usage.py  extract_baseline_parameters.py  extract_kernel_parameters.py  extract_results.sh  extract_results_csv.py  mean.py  mean_rejection.py  results_overview.sh  save_preprocessed.py  submit_DRIAMS_baseline_jobs.sh  submit_DRIAMS_kernel_jobs.sh  submit_baseline_gp_rbf_jobs.sh  submit_baseline_jobs.sh  submit_baseline_jobs_bw.sh  submit_diffusion_kernel_confidence_jobs.sh  submit_diffusion_kernel_jobs.sh  submit_diffusion_kernel_reduced_jobs.sh  submit_maldiquant_baseline_confidence_jobs.sh  submit_maldiquant_baseline_jobs.sh  submit_maldiquant_diffusion_kernel_confidence_jobs.sh  submit_maldiquant_diffusion_kernel_jobs.sh  summarize_dataset.py  util.py  visualise_baseline.py  visualise_feature_map.py  (+1 more)
ismb2020_maldi/datasets/: __init__.py  antibiotics.py  dataset.py  utilities.py
tests/: test_ismb2020_maldi.py
